src/test/ui/polymorphization/const_parameters/functions.stderr
warning: the feature `const_generics` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/functions.rs:3:12
   |
LL | #![feature(const_generics, rustc_attrs)]
   |            ^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #44580 <https://github.com/rust-lang/rust/issues/44580> for more information
   = help: consider using `min_const_generics` instead, which is more stable and complete

error: item has unused generic parameters
  --> $DIR/functions.rs:15:8
   |
LL | pub fn unused<const T: usize>() {
   |        ^^^^^^       - generic parameter `T` is unused

error: aborting due to previous error; 1 warning emitted

